<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
 
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_message"
        android:textSize="15sp" />
 
    <Button       
        android:id="@+id/one"
        android:layout_below="@id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message1"
        android:textSize="20sp" />
 
    <Button
        android:id="@+id/two"
        android:layout_below="@id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message2"
        android:textSize="20sp" />
 
    <Button
        android:id="@+id/three"
        android:layout_below="@id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message3"
        android:textSize="20sp" />
 
    <Button
        android:id="@+id/four"
        android:layout_below="@id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message4"
        android:textSize="20sp" />
 
</RelativeLayout>